1. Экзамен. Структуры данных и алгоритмы. [#419281]